# fabric

./: 2019_12_05-2-30-18_(15.0-25.0).xlsx  README.md  f_extract.py  f_model.py  f_save.py  f_tools.py  gui_extr.py  gui_libs.py  main.py  requirements.txt  setup.cfg
extra/: combine_files.py
src/fabric_model/: extract.py  logger.py  model.py  save.py  tools.py
src/fabric_model/extra/: combine_files.py
src/fabric_model/gui/: dash_backend.py  dash_test.py  plotly_main.py  traits_extr.py  traits_libs.py
tests/: test_tools.py
