[metadata]
name = fabric_model
description = package for exctacting, modeling, visualizing fabric 3d image as in drape machines. Also other functional included, such as calculating shadow area
author = Kezif
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    fabric_model
install_requires =
    cycler>=0.10.0
    joblib>=0.14.0
    kiwisolver>=1.1.0
    matplotlib>=3.1.2
    numpy>=1.17.4
    numpy-stl>=2.10.1
    pandas>=0.25.3
    pyface>=6.1.2
    Pygments>=2.4.2
    pyparsing>=2.4.5
    wxPython>=4.1.1
    python-dateutil>=2.8.1
    python-utils>=2.3.0
    pytz>=2019.3
    rope>=0.14.0
    scipy>=1.3.3
    six>=1.13.0
    traits>=5.2.0
    traitsui>=6.1.3
    xlrd>=1.2.0
    XlsxWriter>=1.2.6
    seaborn>=0.10.1 

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
fabric_model = py.typed

[flake8]
max-line-length = 160